# resume-tool

./: README.md  dune-project  resume.opam
lib/: award.ml  contact.ml  content.ml  dune  education.ml  experience.ml  project.ml  publication.ml  skill.ml  spec.ml  types.ml
templates/: compact.tex  default.tex  template.tex
